--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
     <a href="https://turczaninowia.asu.ru/article/view/17065" target="_blank">https://turczaninowia.asu.ru/article/view/17065</a>
   </div>
 
+  <!-- Новый раздел о патенте -->
+  <div class="citation">
+    <span class="citation-label">Патент:</span> ИЗ №2855013. На процедуру изготовления получен и поддерживается патент, доступен по ссылке: 
+    <a href="https://www.fips.ru/registers-doc-view/fips_servlet?DB=RUPAT&DocNumber=2855013&TypeFile=html" target="_blank">https://www.fips.ru/registers-doc-view/fips_servlet?DB=RUPAT&DocNumber=2855013&TypeFile=html</a>
+  </div>
+
   <!-- Блок программы -->
   <div class="program-block">
     Виртуальный счетчик клеток для ПК: 
